# page-analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: linter.yml  my_check.yml
page_analyzer/: __init__.py  app.py  db_repository.py  load_db_schema.py
page_analyzer/templates/: index.html  not_found.html
page_analyzer/templates/urls/: index.html  show.html
pg_analyzer_docker/: compose.yml
