[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["dmkael <tanmaar@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet-code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
